# KnowladgeBase

./: .gitignore  .pre-commit-config.yaml  .yamllint  C. Allocation.md  C. Структуры.md  C. Указатели.md  DNS.md  ESP32. WiFi-repeater.md  GDB. Breakpoints.md  GDB. Общие понятия об отладке.md  H.264-MPEG4.md  HTTP. Общее.md  IP-cam. Roadmap.md  Linux. multiseat.md  Linux. udev.md  Linux. Команды.md  Linux. Контейнеризация.md  PCIe. Overview.md  PDUDaemon.md  Python. Callbacks.md  Python. Collections.md  Python. PIP.md  Python. Pipenv.md  Python. args и kwargs.md  Python. tox.md  Python. watchdog.md  Python. wheel.md  Python. Интересные фишки при работе со строками..md  Python. Множества set.md  Python. Паттерны проектирования.md  Python. Потоки.md  Python. Словари и хэш-таблицы.md  README.md  SpaceWire. Encoding layer.md  SpaceWire. Protocol stack and interface architecture.md  SpaceWire. Общее.md  U-Boot. Debug.md  U-Boot. Design Details.md  USB in a NutShell. Заметки.md  USB. OTG.md  (+18 more)
.obsidian/: graph.json  workspace.json
Design patterns/: notes.md
TCP IP. Сетевое администрирование/: README.md  Глава 1. Обзор TCP IP.md
bash/: README.md
cmake/prj2/: CMakeLists.txt
cmake/prj2/include/: custom-lib.h
cmake/prj2/src/: custom-lib.c
cmake/prj3/subprj1/: CMakeLists.txt
cmake/prj3/subprj2/: CMakeLists.txt
cmake/prj3/subprj2/src/: main.c
cpp/: .gitignore
english/: 3000 Words.md
glib-gst/: CMakeLists.txt  test-app.c
javascript/: get-request.html  text-parser.html
make/: Makefile.test4
python/: context-manager-class.py
Грокаем алгоритмы/: Chapter1.py  (+13 more)
(+91 files in other folders)
